# ScrewjankEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Dependencies/: .clang-tidy  CMakeLists.txt  vcpkg.json
Dependencies/overlays/vulkan/: vcpkg.json
Engine/Source/Benchmarks/containers/: CMakeLists.txt  UnorderedSet_benchmarks.cpp
Engine/Source/Benchmarks/system/: Allocator_benchmarks.cpp  CMakeLists.txt
Engine/Source/Runtime/: CMakeLists.txt  ScrewjankEngine.hpp
Engine/Source/Tests/containers/: Array_tests.cpp  CMakeLists.txt  ForwardList_tests.cpp  UnorderedSet_tests.cpp  Vector_tests.cpp
Engine/Source/Tests/math/: CMakeLists.txt  Quaternions_test.cpp  Rotators_test.cpp  Vector_test.cpp
Engine/Source/Tests/system/: CMakeLists.txt  FreeListAllocator_test.cpp  LinearAllocator_test.cpp  Memory_test.cpp  PoolAllocator_test.cpp  StackAllocator_test.cpp
SampleProject/: CMakeLists.txt
SampleProject/Source/: SampleProject.cpp
Source/DataDefinitions/: CMakeLists.txt  SceneChunks.cppm  Serialization.cppm  TypeRegistry.cppm  sj.datadefs.ChunkTypes.cppm  sj.datadefs.DataChunk.cppm  sj.datadefs.Serialization.cppm  sj.datadefs.cppm  sj.shared.datadefs.DataChunk.cppm
Source/DataDefinitions/Assets/: sj.datadefs.assets.AssetType.cppm  sj.datadefs.assets.Mesh.cppm  sj.datadefs.assets.Texture.cppm  sj.datadefs.assets.cppm
Source/DataDefinitions/Components/: CameraComponent.cppm  TextureComponent.cppm  TransformComponent.cppm  sj.datadefs.components.CameraChunk.cppm  sj.datadefs.components.Mesh3DChunk.cppm  sj.datadefs.components.TextureChunk.cppm  sj.datadefs.components.TransformChunk.cppm  sj.datadefs.components.cppm
Source/Editor/: CMakeLists.txt  sj.editor.Editor.cppm  sj.editor.cppm
Source/Runtime/: CMakeLists.txt  clang-format  sj.engine.cppm
Source/Runtime/components/: sj.engine.components.CameraComponent.cppm  sj.engine.components.TextureComponent.cppm  sj.engine.components.TransformComponent.cppm  sj.engine.components.cppm
Source/Runtime/config/: sj.engine.config.Config.cppm  sj.engine.config.InputConfig.cppm  sj.engine.config.cppm
Source/Runtime/core/: sj.engine.core.CameraComponent.cppm  sj.engine.core.CameraSystem.cppm  sj.engine.core.Config.cppm  sj.engine.core.Editor.cppm  sj.engine.core.Engine.cppm  sj.engine.core.InputSystem.cppm  sj.engine.core.Mesh3DComponent.cppm  sj.engine.core.Program.cppm  sj.engine.core.Scene.cppm  sj.engine.core.TransformComponent.cppm  sj.engine.core.Window.cppm  sj.engine.core.cppm
Source/Runtime/ecs/: ECSRegistry.cppm  Identifiers.cppm  sj.engine.ecs.Archetype.cppm  sj.engine.ecs.ComponentManifest.cppm  sj.engine.ecs.ECSRegistry.cppm  sj.engine.ecs.Identifiers.cppm  sj.engine.ecs.Serialization.cppm  sj.engine.ecs.cppm
Source/Runtime/framework/: sj.engine.framework.Engine.cppm  sj.engine.framework.Game.cppm  sj.engine.framework.Scene.cppm  sj.engine.framework.Window.cppm  sj.engine.framework.cppm
Source/Runtime/include/: ScrewjankEngine.hpp
Source/Runtime/include/containers/: Array.hpp  (+11 more)
Source/Runtime/rendering/: sj.egnine.rendering.Renderer.cppm  sj.engine.rendering.BufferResource.cppm  sj.engine.rendering.Events.cppm  sj.engine.rendering.Renderer2.cppm  sj.engine.rendering.SamplerResource.cppm  sj.engine.rendering.TextureResource.cppm  sj.engine.rendering.cppm
Source/Runtime/system/: sj.engine.system.Timer.cppm  sj.engine.system.cppm
Source/SJSTD/: CMakeLists.txt  sj.std.concepts.cppm  sj.std.cppm  sj.std.hash.cppm  sj.std.signal.cppm  sj.std.string_hash.cppm  sj.std.string_literal.cppm  sj.std.tuple.cppm  sj.std.type_info.cppm  sj.std.type_traits.cppm  sj.std.typed_ptr.cppm
Source/SJSTD/Containers/: .clang-tidy  any.cppm  array.cppm  map.cppm  sj.std.containers.any.cppm  sj.std.containers.array.cppm  sj.std.containers.cppm  sj.std.containers.map.cppm  sj.std.containers.set.cppm  sj.std.containers.sparse_set.cppm  sj.std.containers.stack.cppm  sj.std.containers.static_string.cppm  sj.std.containers.type_list.cppm  sj.std.containers.unmanaged_list.cppm  sj.std.containers.vector.cppm  sparse_set.cppm  stack.cppm  type_list.cppm  unmanaged_list.cppm  unordered_set.cppm  vector.cppm
Source/SJSTD/Math/: Helpers.cppm  Mat44.cppm  Quat.cppm  Tags.cppm  Vec2.cppm  Vec3.cppm  Vec4.cppm  VecHash.cppm  sj.std.math.cppm
Source/SJSTD/Memory/: sj.std.memory.cppm  sj.std.memory.literals.cppm  sj.std.memory.scratchpad_scope.cppm  sj.std.memory.utils.cppm
Source/Shaders/: CMakeLists.txt  Default.frag  Default.vert
Source/Shared/Containers/: CMakeLists.txt  any.cppm  array.cppm  containers.cppm  map.cppm  sj.shared.containers.cppm  sparse_set.cppm  stack.cppm  type_list.cppm  unmanaged_list.cppm  unordered_set.cppm  vector.cppm
Source/Shared/Core/: CMakeLists.txt  TypeTraits.cppm  sj.shared.core.cppm
Source/Shared/DataDefinitions/: CMakeLists.txt  SceneChunks.cppm  Serialization.cppm  sj.shared.datadefs.DataChunk.cppm  sj.shared.datadefs.cppm
Source/Shared/Math/: CMakeLists.txt  Helpers.cppm  Mat44.cppm  Quat.cppm  Tags.cppm  Vec2.cppm  Vec3.cppm  Vec4.cppm  VecHash.cppm  sj.shared.math.cppm
Source/Tests/DataDefinitions/: CMakeLists.txt  DataChunkTests.cpp  sj_datadefs_tests_main.cpp
Source/Tests/Runtime/: CMakeLists.txt  sj_runtime_tests_main.cpp
Source/Tests/SJSTD/: CMakeLists.txt  sj_std_tests_main.cpp
Source/Tests/containers/: Any_tests.cpp  Array_tests.cpp  CMakeLists.txt  ForwardList_tests.cpp  List_tests.cpp  Optional_tests.cpp  SparseSet_tests.cpp  Stack_tests.cpp  String_tests.cpp  UnmanagedList_tests.cpp  UnorderedSet_tests.cpp  Vector_tests.cpp  container_tests_main.cpp
Source/Tests/shared/: CMakeLists.txt  StringTests.cpp  shared_tests_main.cpp
Source/Tools/BuildTool/: BuildTool.cpp  BuildTool.cs  BuildTool_Config.cs.template  BuildTool_Config.hpp.template  CMakeLists.txt  Utils.cs  Utils.hpp
Source/Tools/ShaderCompiler/: CMakeLists.txt  ScrewjankShaderCompiler.cpp
Tests/SJSTD/: CMakeLists.txt  StringLiteralTests.cpp
Tests/SJSTD/containers/: Array_tests.cpp  StaticString_tests.cpp
Tests/SJSTD/memory/: Memory_test.cpp
(+414 files in other folders)
